samples/_failures_safe/1761455235_a62c62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60f4498e.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_60f4498e.c:168:25: error: missing terminating " character
  168 |         fprintf(stderr, "Error: Expected end of input\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_60f4498e.c:168:9: error: expected expression at end of input
  168 |         fprintf(stderr, "Error: Expected end of input\n
      |         ^~~~~~~
./samples/SAFE/__tmp_60f4498e.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60f4498e.c:168:9: error: expected declaration or statement at end of input
